# aiverify

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
aiverify/: __init__.py  cli.py  scanner.py  utils.py
aiverify/formatters/: json.py  text.py
aiverify/parsers/: js_parser.py  python_parser.py
aiverify/rules/: base.py  generic.py  js_rules.py  python_rules.py
docs/: _config.yml  index.html  robots.txt  sitemap.xml
examples/: bad_js.js  bad_python.py
tests/: test_cli.py  test_rules.py
tests/fixtures/: bad_js.js  bad_python.py
