[metadata]
name = aiverify-cli
version = 0.1.0
description = Verify AI-generated code before you commit — 3 seconds, zero config
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/FMATheNomad/aiverify
author = FMA Software Labs
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing

[options]
packages = find:
install_requires =
    typer>=0.12
    rich>=13.0
    tree-sitter>=0.23
    tree-sitter-python>=0.23
    tree-sitter-javascript>=0.23
python_requires = >=3.11

[options.entry_points]
console_scripts =
    aiverify = aiverify.cli:main

[options.packages.find]
include = aiverify*
